--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -546,7 +546,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><span class="small">The latest version of this document can be found <a href="https://github.com/Armatiek/xslweb/raw/master/docs/XSLWeb%20Developer%20Manual.html">here</a>.</span></p>
+<p><span class="small">The latest version of this document can be found <a href="https://armatiek.github.io/xslweb/XSLWeb%20Developer%20Manual.html">here</a>.</span></p>
 </div>
 </div>
 </div>
@@ -3749,7 +3749,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-08-12 11:54:30 +0200
+Last updated 2020-08-12 12:31:17 +0200
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
