Added hypothes.is integration and note

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -548,6 +548,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p><span class="small">The latest version of this document can be found <a href="https://armatiek.github.io/xslweb/XSLWeb%20Developer%20Manual.html">here</a>.</span></p>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+If you have comments, remarks or questions about this manual, please use the <a href="https://web.hypothes.is/" target="_blank" rel="noopener">hypothes.is</a> panel on the right side of this page. Use <a href="https://hypothes.is/groups/392W26a8/xslweb">this invite link</a> to get access to the XSLWeb group. To add annotations to selected text, please use your right mouse button.
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -3749,7 +3761,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-08-12 12:31:17 +0200
+Last updated 2020-08-12 13:14:21 +0200
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
