Fixed bug in developer manual

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -4872,7 +4872,7 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <div class="sect3">
 <h4 id="install"><a class="anchor" href="#install"></a><a class="link" href="#install">14.3.2. Install</a></h4>
 <div class="paragraph">
-<p>Extract the archive to a directory of your choice. This directory will contain the directory xslweb-3.0.1 containing a directory called <em>home</em> and a file called <em>xslweb.war</em>. The installation of a war is application server specific, so please consult the manual of your server for that. Regardless of which application server is used, two settings are essential:</p>
+<p>Extract the archive to a directory of your choice. This directory will contain the file <em>xslweb.war</em> , a directory <em>docs</em> and a directory <em>home</em>. The installation of a war is application server specific, so please consult the manual of your server for that. Regardless of which application server is used, two settings are essential:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -5205,7 +5205,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-09-10 22:30:06 +0200
+Last updated 2020-09-17 13:19:07 +0200
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
