--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -3519,13 +3519,36 @@ A timeout occurred waiting for the response.</p>
 <pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function external:exec-external(
   $command-line as xs:string,
   $args as xs:string*,
-  $exit-value as xs:integer?,
   $time-out as xs:integer?,
-  $async as xs:boolean) as xs:integer</code></pre>
+  $async as xs:boolean?,
+  $work-dir as xs:string?,
+  $handle-quoting as xs:boolean?) as xs:integer</code></pre>
 </div>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>$command-line: the path to the executable.</p>
+</li>
+<li>
+<p>$args: a sequence of arguments to the application.</p>
+</li>
+<li>
+<p>$time-out: the time in milliseconds after an asynchronous process is killed.</p>
+</li>
+<li>
+<p>$async: indicates if the process must be started asynchronous or not.</p>
+</li>
+<li>
+<p>$work-dir: the working directory for the subprocess.</p>
+</li>
+<li>
+<p>$handle-quoting: indicates if the function should automatically handle the quoting (the default) or not.</p>
+</li>
+</ul>
 </div>
 <div class="paragraph">
-<p>Where $command-line is the path to the executable, $args a sequence of arguments to the application, $exit-value the exit code that is considered as success, $time-out the time in milliseconds after an asynchronous process is killed and $async indicates if the process must be started asynchronous or not.</p>
+<p>The return value is an empty sequence in case of an asynchronous process. In case of a synchronous process the return value is the exit value returned by the process.</p>
 </div>
 </div>
 <div class="sect2">
@@ -5246,7 +5269,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-06 15:30:50 +0100
+Last updated 2020-11-15 13:26:26 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
