--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -8,7 +8,7 @@
 <meta name="description" content="XSLWeb Developer Manual">
 <meta name="keywords" content="XSLWeb XML, XSLT, XML Schema, Schematron, Web development">
 <meta name="author" content="Authors: Maarten Kroon, Arjan Loeffen">
-<title>XSLWeb version 4.0.0-RC2 Developer Manual</title>
+<title>XSLWeb version 4.0.0-RC3 Developer Manual</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /* Asciidoctor default stylesheet | MIT License | http://asciidoctor.org */
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="book toc2 toc-left">
 <div id="header">
-<h1>XSLWeb version 4.0.0-RC2 Developer Manual</h1>
+<h1>XSLWeb version 4.0.0-RC3 Developer Manual</h1>
 <div class="details">
 <span id="author" class="author">Authors: Maarten Kroon, Arjan Loeffen</span><br>
 </div>
@@ -1488,25 +1488,25 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <p>The configuration parameters from the parameters section in the <em>webapp.xml</em>. The parameter’s local name can be given a namespace using the attribute <em>uri</em> and the type of the values can be specified using the attribute <em>type</em>. The value itself can be a sequence of atomic values.</p>
 </li>
 <li>
-<p><em>config:home-dir</em>: the path to the XSLWeb home directory (config = <em>http://www.armatiek.com/xslweb/configuration</em>)</p>
+<p><em>config:home-dir</em> (xs:string): the path to the XSLWeb home directory (config = <em>http://www.armatiek.com/xslweb/configuration</em>)</p>
 </li>
 <li>
-<p><em>config:webapp-dir</em>: the path to the base directory of the webapp.</p>
+<p><em>config:webapp-dir</em> (xs:string): the path to the base directory of the webapp.</p>
 </li>
 <li>
-<p><em>config:webapp-path</em>: The path in de url to the web application (“/” for the webapp <em>ROOT</em> and <em>“/” + webapp-name</em> for other webapps).</p>
+<p><em>config:webapp-path</em> (xs:string): The path in de url to the web application (“/” for the webapp <em>ROOT</em> and <em>“/” + webapp-name</em> for other webapps).</p>
 </li>
 <li>
-<p><em>config:development-mode</em>: whether the webapp runs in development mode (true()) or production-mode (false()).</p>
+<p><em>config:development-mode</em> (xs:boolean): whether the webapp runs in development mode (true()) or production-mode (false()).</p>
 </li>
 <li>
-<p><em>config:debug-mode</em>: whether the webapp runs in debug mode or not.</p>
+<p><em>config:debug-mode</em> (xs:boolean): whether the webapp runs in debug mode or not.</p>
 </li>
 <li>
-<p><em>config:cache-buster-id</em>: see <a href="#cache-busting">Cache busting</a>.</p>
+<p><em>config:cache-buster-id</em> (xs:string): see <a href="#cache-busting">Cache busting</a>.</p>
 </li>
 <li>
-<p><em>req:request-xml-doc</em>: the to XML serialized request object, which is also the input document of every pipeline (req = <em>http://www.armatiek.com/xslweb/request</em>)</p>
+<p><em>req:request-xml-doc</em> (document-node()): the request object, serialized to XML, which is also the input document of every pipeline (req = <em>http://www.armatiek.com/xslweb/request</em>)</p>
 </li>
 <li>
 <p>The Java HttpServletRequest, HttpServletResponse and WebApp objects. These are used in custom XPath extension functions.</p>
@@ -4675,7 +4675,7 @@ public class MyExtensionFunctions {
 </div>
 </div>
 <div class="paragraph">
-<p>Transforms $nodes using the XSLT stylesheet on $path with $options to the result document, using the first node in $nodes as global context item. $path is a path relative to the webapp&#8217;s /xsl directory. $options currently only supports the option $stylesheets-params.</p>
+<p>Transforms $nodes using the XSLT stylesheet on $path with $options to the result document, using the first node in $nodes as global context item. $path is a path relative to the webapp&#8217;s /xsl directory. $options currently only supports the option <em>stylesheets-params</em>.</p>
 </div>
 <div class="paragraph">
 <p>This function can be used everywhere the standard XPath 3.1 function <a href="https://www.w3.org/TR/xpath-functions-31/#func-transform">fn:transform</a> can be used, but this function will cache the compiled XSLT stylesheet, all XSLWeb XPath extension functions will be available in the transformation, and debugging of the stylesheet is supported.</p>
@@ -4840,7 +4840,7 @@ webdav = *
 <p>The sources of XSLWeb can be found on <a href="https://github.com/Armatiek/xslweb">GitHub</a>. XSLWeb is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License version 2.0</a>.</p>
 </div>
 <div class="paragraph">
-<p>Compiled binaries of XSLWeb 4.0.0-RC2 can be downloaded in two distributions:</p>
+<p>Compiled binaries of XSLWeb 4.0.0-RC3 can be downloaded in two distributions:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -4862,13 +4862,13 @@ webdav = *
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-linux-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-linux-x64.tar.gz</a> (for Linux 64-bits machines)</p>
+<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-linux-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-linux-x64.tar.gz</a> (for Linux 64-bits machines)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-osx-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-osx-x64.tar.gz</a> (for macOS 64-bits machines)</p>
+<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-osx-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-osx-x64.tar.gz</a> (for macOS 64-bits machines)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-windows-x64.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-ready-to-run-v4.0.0-RC2-windows-x64.zip</a> (for Windows 64-bits machines)</p>
+<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-windows-x64.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-windows-x64.zip</a> (for Windows 64-bits machines)</p>
 </li>
 </ul>
 </div>
@@ -5239,10 +5239,10 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-war-v4.0.0-RC2.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-war-v4.0.0-RC2.tar.gz</a> (Linux/macOS)</p>
+<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.tar.gz</a> (Linux/macOS)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-war-v4.0.0-RC2.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC2/xslweb-war-v4.0.0-RC2.zip</a> (Windows)</p>
+<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.zip</a> (Windows)</p>
 </li>
 </ul>
 </div>
@@ -5293,48 +5293,6 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <p>Purchase a PE or EE license from <a href="http://www.saxonica.com/" class="bare">http://www.saxonica.com/</a>.</p>
 </li>
 <li>
-<p>Download the PE of EE package from <a href="https://www.saxonica.com/download/SaxonPE10-3J.zip" class="bare">https://www.saxonica.com/download/SaxonPE10-3J.zip</a> or <a href="https://www.saxonica.com/download/SaxonEE10-3J.zip" class="bare">https://www.saxonica.com/download/SaxonEE10-3J.zip</a></p>
-</li>
-<li>
-<p>Extract and register the jars in your local Maven repository using the following commands:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>PE:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>mvn install:install-file -Dfile=saxon-pe-10.3.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-PE -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-<li>
-<p>mvn install:install-file -Dfile=icu4j-59.1.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-PE-icu -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-<li>
-<p>mvn install:install-file -Dfile=saxon-sql-10.3.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-PE-sql -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-</ul>
-</div>
-</li>
-<li>
-<p>EE:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>mvn install:install-file -Dfile=saxon-ee-10.3.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-EE -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-<li>
-<p>mvn install:install-file -Dfile=icu4j-59.1.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-EE-icu -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-<li>
-<p>mvn install:install-file -Dfile=saxon-sql-10.3.jar -DgroupId=net.sf.saxon -DartifactId=Saxon-EE-sql -Dversion=10.3 -Dpackaging=jar</p>
-</li>
-</ul>
-</div>
-</li>
-</ul>
-</div>
-</li>
-<li>
 <p>Place your purchased license file <em>saxon-license.lic</em> in <a href="#xslweb.home">[xslweb.home]</a>/config</p>
 </li>
 <li>
@@ -5350,6 +5308,9 @@ or</p>
 </li>
 </ul>
 </div>
+</li>
+<li>
+<p>NOTE: the Saxon PE and EE jars will be downloaded during build from Saxonica&#8217;s Maven repository at <a href="https://dev.saxonica.com/maven" class="bare">https://dev.saxonica.com/maven</a>.</p>
 </li>
 </ul>
 </div>
@@ -5583,7 +5544,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-10 19:19:56 +0100
+Last updated 2021-02-26 11:24:42 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
