Fixed bug in documentation: incorrect path to resource in example

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -1698,7 +1698,7 @@ If you have comments, remarks or questions about this manual, please use the <a 
             &lt;title&gt;My website&lt;/title&gt;
             &lt;link
               rel="stylesheet"
-              href="{$base-path}/static/css/main{$config:cache-buster-id}.css"/&gt; <i class="conum" data-value="1"></i><b>(1)</b>
+              href="{$base-path}/css/main{$config:cache-buster-id}.css"/&gt; <i class="conum" data-value="1"></i><b>(1)</b>
           &lt;/head&gt;
           &lt;body&gt;
             &lt;p class="hello"&gt;Hello World!&lt;/p&gt;
@@ -5544,7 +5544,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-02-26 11:24:42 +0100
+Last updated 2021-03-08 16:55:03 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
