XSLWeb release v4.0.1-RC-3

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -8,7 +8,7 @@
 <meta name="description" content="XSLWeb Developer Manual">
 <meta name="keywords" content="XSLWeb XML, XSLT, XML Schema, Schematron, Web development">
 <meta name="author" content="Authors: Maarten Kroon, Arjan Loeffen">
-<title>XSLWeb version 4.0.0-RC3 Developer Manual</title>
+<title>XSLWeb version 4.0.1-RC3 Developer Manual</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /* Asciidoctor default stylesheet | MIT License | http://asciidoctor.org */
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="book toc2 toc-left">
 <div id="header">
-<h1>XSLWeb version 4.0.0-RC3 Developer Manual</h1>
+<h1>XSLWeb version 4.0.1-RC3 Developer Manual</h1>
 <div class="details">
 <span id="author" class="author">Authors: Maarten Kroon, Arjan Loeffen</span><br>
 </div>
@@ -4840,7 +4840,7 @@ webdav = *
 <p>The sources of XSLWeb can be found on <a href="https://github.com/Armatiek/xslweb">GitHub</a>. XSLWeb is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License version 2.0</a>.</p>
 </div>
 <div class="paragraph">
-<p>Compiled binaries of XSLWeb 4.0.0-RC3 can be downloaded in two distributions:</p>
+<p>Compiled binaries of XSLWeb 4.0.1-RC3 can be downloaded in two distributions:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -4862,13 +4862,13 @@ webdav = *
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-linux-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-linux-x64.tar.gz</a> (for Linux 64-bits machines)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-linux-x64.tar.gz" class="bare">https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-linux-x64.tar.gz</a> (for Linux 64-bits machines)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-osx-x64.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-osx-x64.tar.gz</a> (for macOS 64-bits machines)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-osx-x64.tar.gz" class="bare">https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-osx-x64.tar.gz</a> (for macOS 64-bits machines)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-windows-x64.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-ready-to-run-v4.0.0-RC3-windows-x64.zip</a> (for Windows 64-bits machines)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-windows-x64.zip" class="bare">https://armatiek.nl/downloads/xslweb/xslweb-ready-to-run-v4.0.1-RC3-windows-x64.zip</a> (for Windows 64-bits machines)</p>
 </li>
 </ul>
 </div>
@@ -5239,10 +5239,10 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.tar.gz" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.tar.gz</a> (Linux/macOS)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb-war-v4.0.1-RC3.tar.gz" class="bare">https://armatiek.nl/downloads/xslweb-war-v4.0.1-RC3.tar.gz</a> (Linux/macOS)</p>
 </li>
 <li>
-<p><a href="https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.zip" class="bare">https://github.com/Armatiek/xslweb/releases/download/v4.0.0-RC3/xslweb-war-v4.0.0-RC3.zip</a> (Windows)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb-war-v4.0.1-RC3.zip" class="bare">https://armatiek.nl/downloads/xslweb-war-v4.0.1-RC3.zip</a> (Windows)</p>
 </li>
 </ul>
 </div>
@@ -5544,7 +5544,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-03-08 16:55:03 +0100
+Last updated 2021-03-12 15:45:08 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
