--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -4945,7 +4945,7 @@ To increase or decrease the Java heap memory size that is available to the XSLWe
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-If you get an error message on macOS like "java cannot be opened because the developer cannot be verified" you must remove the “quarantine” attribute from the java executable which tells the system that java should not be run automatically before being explicitly approved by the user. This can be done running a command like:
+If you get an error message on macOS like "java cannot be opened because the developer cannot be verified" you must remove the “quarantine” attribute from the java executable (which tells the system that java should not be run automatically before being explicitly approved by the user). This can be done running a command like:
 </td>
 </tr>
 </table>
@@ -5256,10 +5256,10 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://armatiek.nl/downloads/xslweb-war-v4.0.1.tar.gz" class="bare">https://armatiek.nl/downloads/xslweb-war-v4.0.1.tar.gz</a> (Linux/macOS)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb/xslweb-war-v4.0.1.tar.gz" class="bare">https://armatiek.nl/downloads/xslweb/xslweb-war-v4.0.1.tar.gz</a> (Linux/macOS)</p>
 </li>
 <li>
-<p><a href="https://armatiek.nl/downloads/xslweb-war-v4.0.1.zip" class="bare">https://armatiek.nl/downloads/xslweb-war-v4.0.1.zip</a> (Windows)</p>
+<p><a href="https://armatiek.nl/downloads/xslweb/xslweb-war-v4.0.1.zip" class="bare">https://armatiek.nl/downloads/xslweb/xslweb-war-v4.0.1.zip</a> (Windows)</p>
 </li>
 </ul>
 </div>
@@ -5561,7 +5561,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-05-04 13:12:37 +0200
+Last updated 2021-05-04 13:22:38 +0200
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
