Added documentation for the new caching functionality

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -502,7 +502,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#request-functions">14.2. Request functions</a></li>
 <li><a href="#response-functions">14.3. Response functions</a></li>
 <li><a href="#session-functions">14.4. Session functions</a></li>
-<li><a href="#webapp-functions">14.5. Webapp functions</a></li>
+<li><a href="#webapp-functions">14.5. Webapp and caching functions</a>
+<ul class="sectlevel3">
+<li><a href="#cache-configuration">14.5.1. Cache configuration</a></li>
+</ul>
+</li>
 <li><a href="#context-functions">14.6. Context functions</a></li>
 <li><a href="#security-functions">14.7. Security (authentication/authorization)</a></li>
 <li><a href="#expath-file-functions">14.8. EXPath File</a>
@@ -819,9 +823,6 @@ If you have comments, remarks or questions about this manual, please use the <a 
 </div>
 <div class="paragraph">
 <p>See <a href="#pipeline-steps">Pipeline steps</a> for a more in depth overview of these different pipeline steps.</p>
-</div>
-<div class="paragraph">
-<p>The output of the pipeline can be cached by specifying extra attributes on the <em>&lt;pipeline:pipeline/&gt;</em> element, see <a href="#response-caching">Response caching</a>.</p>
 </div>
 <div class="paragraph">
 <p>In development-mode, the output of the (intermediate) transformation steps can be logged to a log file, see chapters <a href="#development-mode">Development mode and production mode</a> and <a href="#logging">Logging</a>.</p>
@@ -1218,7 +1219,7 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;pipeline:pipeline&gt;
   &lt;pipeline:transformer
-    name="my-transformation "
+    name="my-transformation"
     xsl-path="my-transformation.xsl"/&gt;
   &lt;pipeline:json-serializer
     name="json-serialization"
@@ -1369,6 +1370,9 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <li>
 <p><strong>content-disposition-filename</strong> (optional): this attribute can be used to force the browser to display a “Save as” dialog (instead of display the file “inline”). The specified filename will be used as the default filename in de dialog.</p>
 </li>
+<li>
+<p><strong>expire-time</strong> (optional): The time the resource may be cached by the client before it expires (in seconds).</p>
+</li>
 </ul>
 </div>
 <div class="paragraph">
@@ -1380,7 +1384,8 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;res:resource-serializer
   path="webapps/examples/xsl/resource/leaves.jpg"
   content-type="image/jpg"
-  content-disposition-filename="my-image.jpg"/&gt;</code></pre>
+  content-disposition-filename="my-image.jpg"
+  expire-time="30"/&gt;</code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1550,9 +1555,6 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <p>In development mode, compiled XSLT stylesheets are not cached. That means that for every request all stylesheets in the pipeline are reread from disk and recompiled and therefore changes will be visible immediately. In production mode, stylesheets are compiled and cached the first time they are used. However, in production mode, changes in stylesheets will automatically be detected by the file alteration monitor and the complete web application will be reloaded. So there is no need to restart the application server when deploying stylesheets in production mode. The file alteration monitor will also detect and pick up changes in the webapp.xml configuration file and plugin extension function library jars.</p>
 </li>
 <li>
-<p>In development mode, the caching framework (using the cache attributes on the pipeline element) is disabled, so no caching is performed.</p>
-</li>
-<li>
 <p>In development mode, the output of a pipeline is not streamed directly to the client (e.g. the browser) but instead buffered until the complete pipeline is executed. If an error occurs during the execution of the pipeline, the error message and stack trace are sent to the client, making it easier to debug the error. If an error occurs in production mode, only a HTTP status code 500 (internal server error) is sent to the client (that is, if the response is not already committed by the application server).</p>
 </li>
 <li>
@@ -1588,6 +1590,18 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <div class="sect1">
 <h2 id="response-caching"><a class="anchor" href="#response-caching"></a><a class="link" href="#response-caching">7. Response caching</a></h2>
 <div class="sectionbody">
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+Because of the upgrade of the Ehcache framework from version 2.6 to 3.9, this functionality will be removed in version 4.1 of XSLWeb (Ehcache dropped the support for SimpleCachingHeadersPageCachingFilter on which the response caching functionality was built).
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>The output of a pipeline can be cached by providing optional caching attributes on the element <em>pipeline:pipeline</em> in the stylesheet <em>request-dispatcher.xsl</em>. The purpose of caching the response output is to gain performance; a response that can be served from cache will be returned quicker because no transformations are necessary and also the load on the server is decreased.</p>
 </div>
@@ -2350,9 +2364,9 @@ ${webapp-path}/webdav/** = authcBasic]]&gt;
 </div>
 </div>
 <div class="sect2">
-<h3 id="webapp-functions"><a class="anchor" href="#webapp-functions"></a><a class="link" href="#webapp-functions">14.5. Webapp functions</a></h3>
+<h3 id="webapp-functions"><a class="anchor" href="#webapp-functions"></a><a class="link" href="#webapp-functions">14.5. Webapp and caching functions</a></h3>
 <div class="paragraph">
-<p>These functions can be used to get and set web application specific attributes. These can be used to share session independent attribute between multiple requests within one web application.</p>
+<p>These functions can be used to get and set web application specific attributes and cache entries. They can be used to share session independent data between multiple requests and multiple users within one web application.</p>
 </div>
 <div class="paragraph">
 <p>Namespace uri: <em>http://www.armatiek.com/xslweb/functions/webapp</em>. In the function signatures below this namespace uri is bound to the prefix <em>webapp</em>.</p>
@@ -2362,26 +2376,187 @@ ${webapp-path}/webdav/** = authcBasic]]&gt;
 </div>
 <div class="listingblock">
 <div class="content">
+<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:set-attribute($name as xs:string, attr as item()*) as xs:boolean?</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Stores a sequence <em>$attr</em> under name <em>$name</em> in de webapp context, so it is available over multiple requests and for multiple users within the same webapp.</p>
+</div>
+<div class="listingblock">
+<div class="content">
 <pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:get-attribute($name as xs:string) as item()*</code></pre>
 </div>
+</div>
+<div class="paragraph">
+<p>Retrieves a previously stored sequence with name <em>$name</em> from the webapp context.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:set-cache-value($cache-name as xs:string, $key-name as xs:string, $value as item()*, $time-to-idle as xs:integer, $time-to-live as xs:integer) as xs:boolean?</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Caches a sequence <em>$value</em> under key <em>$key-name</em> in the cache with name <em>$cache-name</em>. The cache must be configured in the webapp.xml. <em>$time-to-idle</em> is the maximum number of seconds an entry can exist in the cache without being accessed. The entry expires at this limit and will no longer be returned from the cache. The default value is 0, which means no TTI eviction takes place (infinite lifetime). <em>$time-to-live</em> is the maximum number of seconds an entry can exist in the cache regardless of use. The element expires at this limit and will no longer be returned from the cache. The default value is 0, which means no TTL eviction takes place (infinite lifetime).</p>
+</div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+This function is deprecated, the caching framework that XSLWeb uses (Ehcache) does not (really) support tti and ttl on individual cache entries anymore. From XSLWeb 4.1 please use <em>webapp:set-cache-value($cache-name as xs:string, $key-name as xs:string, $value as item()*) as xs:boolean?</em> and specify the times in the configuration for a particular cache in webapp.xml.
+</td>
+</tr>
+</table>
 </div>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:get-cache-value($cache-name as xs:string, $key-name as xs:string) as item()*</code></pre>
 </div>
 </div>
+<div class="paragraph">
+<p>Retrieves a previously cached sequence with key <em>$key-name</em> from the cache with name <em>$cache-name</em>. The cache must be configured in the webapp.xml.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The information below (including section 14.5.1) does only apply to XSLWeb version 4.1 or the master of XSLWeb git.
+</td>
+</tr>
+</table>
+</div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:set-attribute($name as xs:string, attr as item()*) as xs:boolean?</code></pre>
-</div>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:set-cache-value($cache-name as xs:string, $key-name as xs:string, $attrs as item()*, $time-to-idle as xs:integer, $time-to-live as xs:integer) as xs:boolean?</code></pre>
+<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:set-cache-value($cache-name as xs:string, $key-name as xs:string, $value as item()*) as xs:boolean?</code></pre>
 </div>
 </div>
 <div class="paragraph">
+<p>Caches a sequence <em>$value</em> under key <em>$key-name</em> in the cache with name <em>$cache-name</em>. The cache must be configured in the webapp.xml.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-xquery hljs" data-lang="xquery">function webapp:remove-cache-value($cache-name as xs:string, $key-name as xs:string) as xs:boolean?</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Removes a previously cached sequence with key <em>$key-name</em> from the cache with name <em>$cache-name</em>.</p>
+</div>
+<div class="sect3">
+<h4 id="cache-configuration"><a class="anchor" href="#cache-configuration"></a><a class="link" href="#cache-configuration">14.5.1. Cache configuration</a></h4>
+<div class="paragraph">
+<p>Caches must be configured within the webapp.xml. Each webapp.xml can contain zero or more cache configurations. The XML format that is used to configure a cache is exactly the same as the format Ehcache uses to configure a cache in XML, see <a href="https://www.ehcache.org/documentation/3.0/xml.html" target="_blank" rel="noopener">XML Configuration</a>. In fact, the configuration XML schema of Ehcache is imported in the XML schema of webapp.xml, see <em>«xslweb-home»/config/xsd/xslweb/webapp.xsd</em> and <em>«xslweb-home»/config/xsd/ehcache/ehcache-core.xsd</em>.</p>
+</div>
+<div class="paragraph">
+<p>Example of a cache configuration:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;?xml version="1.0"?&gt;
+&lt;webapp
+  xmlns="http://www.armatiek.com/xslweb/webapp"
+  xmlns:xs="http://www.w3.org/2001/XMLSchema"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns:saxon-config="http://saxon.sf.net/ns/configuration"
+  xmlns:ehcache="http://www.ehcache.org/v3"
+  xsi:schemaLocation="http://www.armatiek.com/xslweb/webapp ../../config/xsd/xslweb/webapp.xsd"&gt;
+
+  &lt;title&gt;Caching example&lt;/title&gt;
+  &lt;description&gt;Caching example&lt;/description&gt;
+  &lt;development-mode&gt;true&lt;/development-mode&gt;
+
+  &lt;!-- ... --&gt;
+
+  &lt;ehcache:config&gt;
+    &lt;ehcache:persistence directory="${webapp-dir}/cache"/&gt; <i class="conum" data-value="1"></i><b>(1)</b>
+
+    &lt;ehcache:cache-template name="default-template"&gt; <i class="conum" data-value="2"></i><b>(2)</b>
+      &lt;ehcache:key-type&gt;java.lang.String&lt;/ehcache:key-type&gt;
+      &lt;ehcache:value-type&gt;java.util.ArrayList&lt;/ehcache:value-type&gt;
+      &lt;ehcache:expiry&gt;
+        &lt;ehcache:class&gt;nl.armatiek.xslweb.ehcache.DefaultExpiryPolicy&lt;/ehcache:class&gt;
+      &lt;/ehcache:expiry&gt;
+      &lt;ehcache:heap-store-settings&gt;
+        &lt;ehcache:max-object-graph-size&gt;9223372036854775807&lt;/ehcache:max-object-graph-size&gt;
+      &lt;/ehcache:heap-store-settings&gt;
+    &lt;/ehcache:cache-template&gt;
+
+    &lt;ehcache:cache alias="my-cache" uses-template="default-template"&gt; <i class="conum" data-value="3"></i><b>(3)</b>
+      &lt;ehcache:expiry&gt; <i class="conum" data-value="4"></i><b>(4)</b>
+        &lt;ehcache:tti unit="seconds"&gt;900&lt;/ehcache:tti&gt;
+      &lt;/ehcache:expiry&gt;
+      &lt;ehcache:resources&gt; <i class="conum" data-value="5"></i><b>(5)</b>
+        &lt;ehcache:heap unit="entries"&gt;32&lt;/ehcache:heap&gt;
+        &lt;ehcache:offheap unit="MB"&gt;64&lt;/ehcache:offheap&gt; &lt;!-- Also set Java option -XX:MaxDirectMemorySize! --&gt;
+        &lt;ehcache:disk unit="GB" persistent="true"&gt;2&lt;/ehcache:disk&gt;
+      &lt;/ehcache:resources&gt;
+    &lt;/ehcache:cache&gt;
+
+    &lt;ehcache:cache alias="another-cache" uses-template="default-template"&gt;
+      &lt;!-- ... --&gt;
+    &lt;/ehcache:cache&gt;
+
+  &lt;/ehcache:config&gt;
+
+&lt;/webapp&gt;</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>The location where cache entries are stored that must be serialized to disk.</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>The default template that cache definitions can refer to. The information in the default-template <strong>must</strong> be specified for each cache definition.</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td>The definition of a cache named "my-cache". This name must be used in the extension function webapp:set-cache-value()/webapp:get-cache-value().</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="4"></i><b>4</b></td>
+<td>The expiry times for all cache entries within this cache definition. The time-to-idle (tti) <strong>or</strong> time-to-live can be specified here (see Ehcache documentation).</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="5"></i><b>5</b></td>
+<td>The configuration of the capacity of the heap memory (within the JVM), off-heap memory (outside the JVM) and disk that is used for caching entries.</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Please note the following:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Caching in heap memory is the fastest option (especially when nodes are cached), because objects that are cached in heap memory do not have to be serialized and deserialized, unlike objects that are cached off-heap or to disk. However when serialization of nodes is necessary, XSLWeb serializes the node to a compact binary form called the <a href="https://en.wikipedia.org/wiki/Fast_Infoset" target="_blank" rel="noopener">Fast Infoset</a>, that can be deserialized/parsed more quickly than the original XML document.</p>
+</li>
+<li>
+<p>The unit of the capacity of the heap memory can be specified in number of entries, but also in B, kB, MB, GB. (off-heap and disk only in bytes). Because cache entries in the heap are not serialized, their size is far more difficult to calculate than in case of off-heap or disk memory, in which case the entries are serialized. In the case of a byte-sized heap, Ehcache must traverse the object graph of the cache entry, which in the case of XSLWeb can be a node. Byte sizing of the heap therefore has a runtime performance impact that depends on the size and graph complexity of the data cached.</p>
+</li>
+</ul>
+</div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+Byte sizing of heap capacity currently does not work within XSLWeb (investigation is ongoing&#8230;&#8203;). Therefore it is recommended for now to only specify the capacity of heap memory in number of entries, not in bytes.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
 <p>See example 7 how to use the webapp functions to set and get webapp attributes, and example 14 how to use the caching functions.</p>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -5561,7 +5736,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-05-04 13:22:38 +0200
+Last updated 2021-09-09 13:32:53 +0200
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
